Fixed the gap inbetween the tab title and info.

--- a/styles/style.css
+++ b/styles/style.css
@@ -272,15 +272,15 @@ section h2 {
 	margin: 0; /* Remove margin to make the title span into the border */
 	cursor: pointer; /* Indicate that the title is clickable */
 	background-color: var(--header-bg-color); /* Mocha initial background color */
-	padding: 10px;
-	border-radius: 0.2rem;
-	border-top-left-radius: 8px; /* Rounded corners for the top */
-	border-top-right-radius: 8px; /* Rounded corners for the top */
+	padding: 10px 20px; /* Adjust padding to remove the gap */
+	border-top-left-radius: .2rem; /* Rounded corners for the top */
+	border-top-right-radius: .2rem; /* Rounded corners for the top */
 	transition: background-color 0.3s ease-in-out;
 }
 
 section h2:hover {
 	background-color: var(--section-hover-bg-color); /* Mocha hover shade */
+	
 }
 
 section.collapsed {
